--- a/MegProject.Data/packages.config
+++ b/MegProject.Data/packages.config
@@ -6,6 +6,8 @@
   <package id="EntityFramework.Cache" version="1.0.0" targetFramework="net452" />
   <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
