New Template For CodeFirst Base

--- a/MegProject.Data/App.config
+++ b/MegProject.Data/App.config
@@ -16,7 +16,10 @@
   </entityFramework>
   <connectionStrings>
     <!--<add name="MegProjectDbEntities" connectionString="Data Source=DESKTOP-K4S9J46;Initial Catalog=MegProjectDb;Persist Security Info=True;User ID=sa;Password=guven85" providerName="System.Data.EntityClient" />-->
-  <add name="MegProjectDbEntities" connectionString="metadata=res://*/MegProjecDbModel.csdl|res://*/MegProjecDbModel.ssdl|res://*/MegProjecDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K4S9J46;initial catalog=MegProjectDb;persist security info=True;user id=sa;password=guven85;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+
+    <add name="MegAppContext" connectionString="Data Source=DESKTOP-K4S9J46;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
