--- a/MegProject.Web/Web.config
+++ b/MegProject.Web/Web.config
@@ -32,9 +32,8 @@
   </log4net>
   
   <connectionStrings>
-     <add name="MegProjectDbEntities" connectionString="metadata=res://*/MegProjecDbModel.csdl|res://*/MegProjecDbModel.ssdl|res://*/MegProjecDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K4S9J46;initial catalog=MegProjectDb;persist security info=True;user id=sa;password=guven85;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    
-  </connectionStrings>
+     <!--<add name="MegProjectDbEntities" connectionString="metadata=res://*/MegProjecDbModel.csdl|res://*/MegProjecDbModel.ssdl|res://*/MegProjecDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K4S9J46;initial catalog=MegProjectDb;persist security info=True;user id=sa;password=guven85;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="MegAppContext" connectionString="Data Source=DESKTOP-K4S9J46;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
