--- a/MegProject.Data.Core/packages.config
+++ b/MegProject.Data.Core/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="AutoMapper" version="4.2.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.BulkInsert-ef6" version="6.0.2.8" targetFramework="net452" />
+  <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net452" />
 </packages>
