Data.Core and Business Ninject

--- a/MegProject.Data/App.config
+++ b/MegProject.Data/App.config
@@ -15,8 +15,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="MegAppContext" connectionString="Data Source=DESKTOP-K4S9J46;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />-->
-    <add name="MegAppContext" connectionString="Data Source=HP-PC\SQLEXPRESS;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />
+    <add name="MegAppContext" connectionString="Data Source=DESKTOP-K4S9J46;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />
+    <!--<add name="MegAppContext" connectionString="Data Source=HP-PC\SQLEXPRESS;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   
   <runtime>
