--- a/MegProject.Data/MegProject.Data.csproj
+++ b/MegProject.Data/MegProject.Data.csproj
@@ -93,8 +93,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\DbConfiguration.cs" />
-    <Compile Include="Core\GenericRepository.cs" />
-    <Compile Include="Core\IGenericRepository.cs" />
     <Compile Include="Core\IUnitOfWork.cs" />
     <Compile Include="Core\UnitOfWork.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -108,22 +106,6 @@
     <Compile Include="Models\UserRoles.cs" />
     <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\PermissionDetails\IPermissionDetailsRepository.cs" />
-    <Compile Include="Repositories\PermissionDetails\PermissionDetailsRepository.cs" />
-    <Compile Include="Repositories\Permissions\IPermissionsRepository.cs" />
-    <Compile Include="Repositories\Permissions\PermissionsRepository.cs" />
-    <Compile Include="Repositories\RolePermissions\IRolePermissionsRepository.cs" />
-    <Compile Include="Repositories\RolePermissions\RolePermissionsRepository.cs" />
-    <Compile Include="Repositories\Roles\IRolesRepository.cs" />
-    <Compile Include="Repositories\Roles\RolesRepository.cs" />
-    <Compile Include="Repositories\SystemActions\ISystemActionRepository.cs" />
-    <Compile Include="Repositories\SystemActions\SystemActionRepository.cs" />
-    <Compile Include="Repositories\SystemControllers\ISystemControllerRepository.cs" />
-    <Compile Include="Repositories\SystemControllers\SystemControllerRepository.cs" />
-    <Compile Include="Repositories\UserRoles\IUserRolesRepository.cs" />
-    <Compile Include="Repositories\UserRoles\UserRolesRepository.cs" />
-    <Compile Include="Repositories\Users\IUserRepository.cs" />
-    <Compile Include="Repositories\Users\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -147,7 +129,9 @@
       <Name>MegProject.Data.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
