--- a/MegProject.Data.Core/packages.config
+++ b/MegProject.Data.Core/packages.config
@@ -4,4 +4,5 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.BulkInsert-ef6" version="6.0.2.8" targetFramework="net452" />
   <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net452" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
 </packages>
