--- a/MegProject.Web/packages.config
+++ b/MegProject.Web/packages.config
@@ -2,9 +2,9 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="AutoMapper" version="4.2.1" targetFramework="net452" />
-  <package id="bootstrap" version="3.3.6" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.5" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="jQuery" version="2.2.4" targetFramework="net452" />
+  <package id="jQuery" version="3.0.0.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.15.0" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
@@ -31,12 +31,17 @@
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="Select2.js" version="4.0.3" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.1.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
