--- a/MegProject.Data.Core/MegProject.Data.Core.csproj
+++ b/MegProject.Data.Core/MegProject.Data.Core.csproj
@@ -50,6 +50,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
       <Private>True</Private>
@@ -68,6 +76,7 @@
   <ItemGroup>
     <Compile Include="Base\GenericRepository.cs" />
     <Compile Include="Base\IGenericRepository.cs" />
+    <Compile Include="IdentityBase\ApplicationUser.cs" />
     <Compile Include="ModelBase\EntityBase.cs" />
     <Compile Include="ModelBase\IEntityBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
