--- a/MegProject.Business.Manager/MegProject.Business.Manager.csproj
+++ b/MegProject.Business.Manager/MegProject.Business.Manager.csproj
@@ -122,6 +122,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleAppService\IRoleApp.cs" />
     <Compile Include="RoleAppService\RoleApp.cs" />
+    <Compile Include="TestCacheApp\ITestCache.cs" />
+    <Compile Include="TestCacheApp\TestCache.cs" />
     <Compile Include="UserAppService\IUserApp.cs" />
     <Compile Include="UserAppService\UserApp.cs" />
   </ItemGroup>
@@ -154,6 +156,7 @@
       <Name>MegProject.Dto</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
