--- a/MegProject.Web/Web.config
+++ b/MegProject.Web/Web.config
@@ -11,7 +11,7 @@
   </configSections>
   <log4net>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value="BusLogs.txt" />
+      <file value="ApplicationLogs.txt" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="10" />
