Data Caching, reflection and custom attribute

--- a/MegProject.Business.Core/MegProject.Business.Core.csproj
+++ b/MegProject.Business.Core/MegProject.Business.Core.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Cache\CacheProvider.cs" />
     <Compile Include="Cache\DefaultCacheProvider.cs" />
     <Compile Include="Cache\MegCache.cs" />
+    <Compile Include="Cache\MegCacheManager.cs" />
     <Compile Include="ControllerActionAppService\ControllerActionApp.cs" />
     <Compile Include="ControllerActionAppService\IControllerActionApp.cs" />
     <Compile Include="IApplicationCore.cs" />
