Config for Asus

--- a/MegProject.Web/Web.config
+++ b/MegProject.Web/Web.config
@@ -32,9 +32,9 @@
   </log4net>
   
   <connectionStrings>
-    <add name="MegAppContext" connectionString="Data Source=DESKTOP-K4S9J46;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />
+    <!--<add name="MegAppContext" connectionString="Data Source=DESKTOP-K4S9J46;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />-->
     <!--<add name="MegAppContext" connectionString="Data Source=HP-PC\SQLEXPRESS;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="MegAppContext" connectionString="Data Source=DESKTOP-6HIGR0S\MURATGUVEN;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />-->
+    <add name="MegAppContext" connectionString="Data Source=DESKTOP-6HIGR0S\MURATGUVEN;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
