--- a/MegProject.Business.Core/MegProject.Business.Core.csproj
+++ b/MegProject.Business.Core/MegProject.Business.Core.csproj
@@ -76,6 +76,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Web" />
