--- a/MegProject.Business.Manager/MegProject.Business.Manager.csproj
+++ b/MegProject.Business.Manager/MegProject.Business.Manager.csproj
@@ -120,12 +120,8 @@
     <Compile Include="IdentityAppService\EmailService.cs" />
     <Compile Include="IdentityAppService\SmsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoleAppService\IRoleApp.cs" />
-    <Compile Include="RoleAppService\RoleApp.cs" />
     <Compile Include="TestCacheApp\ITestCache.cs" />
     <Compile Include="TestCacheApp\TestCache.cs" />
-    <Compile Include="UserAppService\IUserApp.cs" />
-    <Compile Include="UserAppService\UserApp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -156,7 +152,9 @@
       <Name>MegProject.Dto</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="PermissionAppService\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
