Generic Business Classes

--- a/MegProject.Business.Manager/MegProject.Business.Manager.csproj
+++ b/MegProject.Business.Manager/MegProject.Business.Manager.csproj
@@ -119,6 +119,8 @@
     <Compile Include="IdentityAppService\ApplicationUserManager.cs" />
     <Compile Include="IdentityAppService\EmailService.cs" />
     <Compile Include="IdentityAppService\SmsService.cs" />
+    <Compile Include="PermissionAppService\IPermissionApp.cs" />
+    <Compile Include="PermissionAppService\PermissionApp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestCacheApp\ITestCache.cs" />
     <Compile Include="TestCacheApp\TestCache.cs" />
@@ -152,9 +154,7 @@
       <Name>MegProject.Dto</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="PermissionAppService\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
